# playwrightnb

./: 00_core.ipynb  CHANGELOG-commonmark.md  CHANGELOG.html  CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  index.ipynb  nbdev.yml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
playwrightnb/: __init__.py  _modidx.py  core.py  patch.py
site_libs/bootstrap/: bootstrap.min.css
