[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwrightnb"
version = "0.1.0"
description = "Use sync mode Playwright interactively, inside a Jupyter notebook"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jeremy Howard", email = "info@fast.ai" }
]
requires-python = ">=3.7, <4"
dependencies = [ "nest-asyncio", "fastcore", "playwright" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
]

